# agent-tune-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_eval/: __init__.py  analysis.py  artifacts.py  cli.py  clustering.py  comparison.py  config.py  dataset.py  evaluation_policy.py  export.py  inspect.py  models.py  reporting.py  run_id.py
agent_eval/evaluators/: __init__.py  base.py  execution.py  llm_judge.py  llm_stub.py  rule.py
agent_eval/runners/: __init__.py  adapter.py  base.py  http.py  script.py
agent_eval/templates/: eval.yaml  sample.jsonl  sample_agent.py
agent_eval/utils/: jsonpath.py  redact.py
docs/: prd.md  release-checklist.md
scripts/: check-release.py  publish-release.py
tests/: test_adapter_runner.py  test_analysis_parity.py  test_cli_e2e.py  test_comparison.py  test_core.py  test_release_readiness.py  test_signature_cluster_enrichment.py
