[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-deepeval"
version = "0.2.0"
description = "Local-first Agent batch evaluation and failure analysis CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "Jinja2>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
]
release = ["build>=1.2", "twine>=5"]
deepeval = ["deepeval>=2.0"]

[project.scripts]
agent-eval = "agent_eval.cli:app"

[tool.setuptools.packages.find]
include = ["agent_eval*"]

[tool.setuptools.package-data]
agent_eval = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
